[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/Carreau.gd" type="Script" id=1]
[ext_resource path="res://resources/texture/soleil.png" type="Texture" id=2]
[ext_resource path="res://resources/texture/lune.png" type="Texture" id=3]

[node name="Carreau" type="Node2D"]
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
margin_right = 25.0
margin_bottom = 25.0

[node name="Button" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_right = 25.0
margin_bottom = 25.0

[node name="soleil" type="Sprite" parent="."]
position = Vector2( 12.6136, 12.1503 )
scale = Vector2( 0.189595, 0.189595 )
texture = ExtResource( 2 )

[node name="lune" type="Sprite" parent="."]
position = Vector2( 13.5191, 11.7922 )
scale = Vector2( 0.277266, 0.277266 )
texture = ExtResource( 3 )

[node name="PlantDeath" type="Timer" parent="."]
one_shot = true

[node name="MushDeath" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="PlantBirth" type="Timer" parent="."]
one_shot = true

[node name="MushBirth" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="WatchTime" type="Timer" parent="."]
wait_time = 1.1
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="timeout" from="PlantDeath" to="." method="_on_PlantDeath_timeout"]
[connection signal="timeout" from="MushDeath" to="." method="_on_MushDeath_timeout"]
[connection signal="timeout" from="PlantBirth" to="." method="_on_PlantBirth_timeout"]
[connection signal="timeout" from="MushBirth" to="." method="_on_MushBirth_timeout"]
[connection signal="timeout" from="WatchTime" to="." method="_on_WatchTime_timeout"]
